// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectfieldWrapper snapshots tests renders SelectField component 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
    style="width: 100%;"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="false"
      id="test-label"
    />
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiSelect-root css-cci5mh-MuiInputBase-root-MuiInput-root-MuiSelect-root"
      floatinglabeltext="This is a test selectfield component"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="test-select"
        class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-unhb03-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
        data-testid="test-select"
        id="test-select"
        role="combobox"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="notranslate"
        >
          ​
        </span>
      </div>
      <input
        aria-hidden="true"
        aria-invalid="false"
        aria-labelledby="test-label"
        class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
        data-analyticsid="test-input"
        data-testid="test-input"
        id="test-input"
        name="selectfield"
        tabindex="-1"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`SelectfieldWrapper snapshots tests renders an error 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
    style="width: 100%;"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="false"
      id="test-label"
    />
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-formControl MuiSelect-root css-cci5mh-MuiInputBase-root-MuiInput-root-MuiSelect-root"
      floatinglabeltext="test selectfield component"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-invalid="true"
        aria-labelledby="test-select"
        class="MuiSelect-select MuiSelect-standard Mui-error MuiInputBase-input MuiInput-input css-unhb03-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
        data-testid="test-select"
        id="test-select"
        role="combobox"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="notranslate"
        >
          ​
        </span>
      </div>
      <input
        aria-hidden="true"
        aria-invalid="true"
        aria-labelledby="test-label"
        class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
        data-analyticsid="test-input"
        data-testid="test-input"
        id="test-input"
        name="selectfield"
        tabindex="-1"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
    <p
      class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium css-u90aml-MuiFormHelperText-root"
    >
      Something bad happened
    </p>
  </div>
</div>
`;
